# dfc_gpt

./: .gitignore  LICENSE  README.md  TODO.md  build-gpt4all.sh  build-lib.sh  pubspec.yaml
cppLib/: .gitignore  build.sh  gptlib.h  main.cpp  notes.txt  run.sh
cppLib/chatlib/: .gitignore  build.sh
cppLib/dfc_gpt/: CMakeLists.txt  main.cpp
dart_tools/: pubspec.yaml
dart_tools/lib/: build_gpt_bundle.dart  copy_libraries.dart
lib/: dfc_gpt.dart
lib/src/: llmodel.dart  llmodel_error.dart  llmodel_library.dart  llmodel_library_types.dart  llmodel_prompt_config.dart  llmodel_prompt_context.dart
lib/src/ai_bot/: bot_client.dart  bot_client_notifier.dart  bot_isolate.dart  bot_isolate_function.dart  bot_server.dart  bot_types.dart
lib/src/ai_lib/: llmodel.dart  llmodel_library.dart  llmodel_library_types.dart  llmodel_prompt_config.dart
lib/src/ai_lib/models/: bot_config.dart  bot_config.g.dart  gpt_model_file.dart  gpt_model_file.g.dart  llmodel_prompt_config.dart  llmodel_prompt_config.g.dart
lib/src/platform_plugin/: platform_plugin.dart
macos/: dfc_gpt.podspec
macos/Classes/: DfcGpt.swift  DfcGptPlugin.swift  MacOSPlugin.swift
macos/Libraries/: libbert-avxonly.dylib  libbert-default.dylib  libdfc-gpt.dylib  libfalcon-avxonly.dylib  libfalcon-default.dylib  libgptj-avxonly.dylib  libgptj-default.dylib  libllamamodel-mainline-avxonly.dylib  libllamamodel-mainline-default.dylib  libllamamodel-mainline-metal.dylib  libllmodel.dylib  libreplit-mainline-avxonly.dylib  libreplit-mainline-default.dylib  libreplit-mainline-metal.dylib  libstarcoder-avxonly.dylib  libstarcoder-default.dylib
shared_libs/: .gitignore
shared_libs/dfc_gpt/: CMakeLists.txt  main.cpp
tools/: build-all.sh  build-gpt4all.sh  build-lib.sh  clean.sh  clone-gpt4all.sh  outdated.sh  pub.sh
tools/dart_tools/: pubspec.yaml
tools/dart_tools/lib/: copy_libraries.dart
